General fixes and tooltip added to taphold on mobile

--- a/reader/css/main.css
+++ b/reader/css/main.css
@@ -587,6 +587,17 @@ ul.tabmenu li.selected a {
 	clear: both;
 }
 
+.off {
+	position:absolute;
+  z-index: 100;
+  background-color:none;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  display:none;
+}
+
 .disabled, .disabled > a {
 	cursor: default;
 	background-color: #ffffff !important;
@@ -956,7 +967,7 @@ ul.tabmenu li.selected a {
 }
 .mobile-sidebar-back {
 	display:none;
-	position:absolute;
+	position:fixed;
 	top:53px;
 	font-size:40px;
 	color:#00cc99;
@@ -1045,6 +1056,13 @@ a.sidebar-icon-back {
 
 #info-text {
 	display:block;
+	overflow-x:hidden!important;
+}
+
+#info-container {
+	overflow:hidden!important;
+	min-width:100%;
+	position:absolute;
 }
 
 #infotext {
@@ -1057,7 +1075,7 @@ a.sidebar-icon-back {
     padding-left: 10px;
     padding-right:10px;
     max-width: 70%;
-    top: -10px;
+    top: -3px;
     display:block!important;
 }
 
@@ -1234,6 +1252,28 @@ input[type=checkbox]:checked + label:before {
   background-color: rgba(0,0,0,0.5); /*dim the background*/
   display:none;
 }
+
+.context-close {
+	font-size:40px;
+	color:#00cc99;
+	-webkit-touch-callout: none!important;
+	padding-top:-10px;
+	vertical-align:text-top;
+	
+}
+#context-close {
+	display:inline-block;
+	margin-left:230px;
+	-webkit-touch-callout: none!important;
+	margin-top:-175px;
+	position:absolute;
+
+}
+
+a.context-close {
+	-webkit-touch-callout: none!important;
+}
+
 
 #layer-context {
 	display:none;
@@ -1455,7 +1495,7 @@ header {
 }
 .mobile-sidebar-icon {
 	display:block;
-	position:absolute;
+	position:fixed;
 	top:53px;
 	font-size:40px;
 	color:#00cc99;
@@ -1468,7 +1508,7 @@ header {
 }
 .mobile-sidebar-back {
 	display:none;
-	position:absolute;
+	position:fixed;
 	top:53px;
 	font-size:40px;
 	color:#00cc99;
@@ -1739,7 +1779,7 @@ header {
 }
 .mobile-sidebar-icon {
 	display:block;
-	position:absolute;
+	position:fixed;
 	top:85px;
 	font-size:40px;
 	color:#00cc99;
@@ -1751,7 +1791,7 @@ header {
 }
 .mobile-sidebar-back {
 	display:none;
-	position:absolute;
+	position:fixed;
 	top:85px;
 	font-size:40px;
 	color:#00cc99;
@@ -1765,7 +1805,7 @@ header {
 @-moz-document url-prefix() { 
 .mobile-sidebar-back {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 90px;
     font-size: 40px;
     color: #0C9;
@@ -1833,7 +1873,7 @@ header {
 	}
 	.mobile-sidebar-icon {
 	display:block;
-	position:absolute;
+	position:fixed;
 	top:98px;
 	font-size:40px;
 	color:#00cc99;
@@ -1845,7 +1885,7 @@ header {
 	}
 	.mobile-sidebar-back {
 	display:none;
-	position:absolute;
+	position:fixed;
 	top:98px;
 	font-size:40px;
 	color:#00cc99;
@@ -1953,7 +1993,7 @@ header {
 	}
 	.mobile-sidebar-back {
 	display:none;
-	position:absolute;
+	position:fixed;
 	top:98px;
 	font-size:40px;
 	color:#00cc99;
